[gd_scene load_steps=6 format=3 uid="uid://boipvhnjm6t4"]

[ext_resource type="Theme" uid="uid://cvocwk6x1wj7h" path="res://themes/global.tres" id="1_okkqq"]
[ext_resource type="Script" path="res://scripts/player/debug.gd" id="2_k0bik"]
[ext_resource type="Shader" path="res://shaders/blur/gaussian_blur.gdshader" id="3_35tnx"]
[ext_resource type="StyleBox" uid="uid://dgm5mu51qsew7" path="res://themes/stylebox/global_style_box.tres" id="4_4vs3h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dvaf0"]
shader = ExtResource("3_35tnx")
shader_parameter/blur_amount = 4.0
shader_parameter/brightness = 0.95
shader_parameter/contrast = 1.05
shader_parameter/saturation = 1.0

[node name="Debug" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 795.0
offset_top = 54.0
offset_right = 1012.0
offset_bottom = 464.0
theme = ExtResource("1_okkqq")
script = ExtResource("2_k0bik")

[node name="Debug" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 165.0
offset_top = -29.0
offset_right = 365.0
offset_bottom = 42.0
scale = Vector2(0.25, 0.25)
focus_mode = 0
text = "Debug"

[node name="Container" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="Background" type="Panel" parent="Container"]
texture_filter = 2
material = SubResource("ShaderMaterial_dvaf0")
layout_mode = 0
offset_left = 1.0
offset_right = 218.0
offset_bottom = 413.0
mouse_filter = 1
theme = ExtResource("1_okkqq")
theme_override_styles/panel = ExtResource("4_4vs3h")

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 18.0
offset_top = 19.0
offset_right = 218.0
offset_bottom = 181.0
theme_override_constants/separation = 5

[node name="TimescaleL" type="Label" parent="Container/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Timescale"

[node name="Timescale" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 3

[node name="OptionButton" type="CheckBox" parent="Container/VBoxContainer/Timescale"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1

[node name="HSlider" type="HSlider" parent="Container/VBoxContainer/Timescale"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
focus_mode = 0
mouse_filter = 1
min_value = 0.01
max_value = 2.0
step = 0.01
value = 1.0

[node name="Label" type="Label" parent="Container/VBoxContainer/Timescale"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "1"

[node name="Pause" type="CheckBox" parent="Container/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "Pause Physics"

[node name="PlayerState" type="CheckBox" parent="Container/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "Player State"

[node name="PlayerMenu" type="CheckBox" parent="Container/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "Show Terminal"

[node name="Zoom" type="CheckBox" parent="Container/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "Zoom"

[node name="FreeLook" type="CheckBox" parent="Container/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "Pan Camera"

[node name="HideFloating" type="CheckBox" parent="Container/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "Hide Floating Node"
